# my_agentic_team

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md
github-agent/: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml
github-agent/config/: github-agent.example.toml
github-agent/docs/: Architecture.md  Initial_Plan.md
github-agent/src/github_agent/: __init__.py  config.py  github.py  main.py  models.py  planner.py
github-agent/src/github_agent/scanners/: __init__.py  pip_audit.py  pip_audit_runner.py  trivy.py
github-agent/tests/: test_config.py  test_github.py  test_main.py  test_pip_audit.py  test_pip_audit_runner.py  test_planner.py  test_scan_agent.py  test_trivy.py
github-agent/tests/fixtures/: pip-audit.json  trivy.json
gmail-inbox-agent/: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  release.config.cjs
gmail-inbox-agent/config/: rules.example.toml
gmail-inbox-agent/docs/: Architecture.md  Classification_Tuning.md  Docker.md  Gmail_OAuth_Setup.md  Initial_Plan.md  LLM_Providers.md  Release.md
gmail-inbox-agent/src/gmail_inbox_agent/: __init__.py  config.py  graph.py  labels.py  main.py  models.py
gmail-inbox-agent/src/gmail_inbox_agent/gmail/: actions.py  auth.py  client.py
gmail-inbox-agent/src/gmail_inbox_agent/llm/: classifier.py  prompts.py  rules.py
gmail-inbox-agent/tests/: test_actions.py  test_classifier.py  test_graph.py  test_main.py  test_memory.py  test_rules.py  test_summary.py
(+7 files in other folders)
