[project]
name = "github-agent"
version = "0.1.0"
description = "Scheduled GitHub maintenance and security issue agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[project.scripts]
github-agent = "github_agent.main:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

